# RAG

agentic-RAG/: main.py  pyproject.toml  requirements.txt
agentic-RAG/src/: agent.py  chunker.py  generator.py  ingest.py  setup.py  utils.py  vector_store.py  workflow.py
basic_q_and_a/: .gitignore  main.py  pyproject.toml  requirements.txt
basic_q_and_a/src/: chunker.py  embedder.py  gateway.py  generator.py  ingest.py  pipeline.py  util.py  vector_store.py
python/assignment_1/: q1.py  q10.py  q2.py  q3.py  q4.py  q5.py  q6.py  q7.py  q8.py  q9.py  random_data.csv  sales.json  sales_output.csv  uptime log.txt
